// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppsList should match a snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        My Apps
      </mock-styled.h1>
      <mock-styled.div
        classname="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in mock-css.
  cursor: pointer;
"
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-card-sub-heading-wrap-avatar"
              >
                <mock-styled.h5>
                  MOCK_APP_NAME
                </mock-styled.h5>
                <mock-styled.h6 />
                <mock-styled.h6 />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in mock-css.
  cursor: pointer;
"
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-card-sub-heading-wrap-avatar"
              >
                <mock-styled.h5>
                  MOCK_APP_NAME_ANOTHER
                </mock-styled.h5>
                <mock-styled.h6 />
                <mock-styled.h6 />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      My Apps
    </mock-styled.h1>
    <mock-styled.div
      classname="el-mb11"
    >
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in mock-css.
  cursor: pointer;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-card-sub-heading-wrap-avatar"
            >
              <mock-styled.h5>
                MOCK_APP_NAME
              </mock-styled.h5>
              <mock-styled.h6 />
              <mock-styled.h6 />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in mock-css.
  cursor: pointer;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-card-sub-heading-wrap-avatar"
            >
              <mock-styled.h5>
                MOCK_APP_NAME_ANOTHER
              </mock-styled.h5>
              <mock-styled.h6 />
              <mock-styled.h6 />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AppsList should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        My Apps
      </mock-styled.h1>
      <mock-styled.div
        classname="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in mock-css.
  cursor: pointer;
"
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-card-sub-heading-wrap-avatar"
              >
                <mock-styled.h5>
                  MOCK_APP_NAME
                </mock-styled.h5>
                <mock-styled.h6 />
                <mock-styled.h6 />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div
            classname="el-fade-in mock-css.
  cursor: pointer;
"
          >
            <mock-styled.div>
              <mock-styled.div
                classname=""
              >
                <mock-styled.div
                  style="font-size: 1.953125em; width: 50px; height: 50px;"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 60 35"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                      fill="#E3E3E3"
                    />
                  </svg>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-card-sub-heading-wrap-avatar"
              >
                <mock-styled.h5>
                  MOCK_APP_NAME_ANOTHER
                </mock-styled.h5>
                <mock-styled.h6 />
                <mock-styled.h6 />
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      My Apps
    </mock-styled.h1>
    <mock-styled.div
      classname="el-mb11"
    >
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in mock-css.
  cursor: pointer;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-card-sub-heading-wrap-avatar"
            >
              <mock-styled.h5>
                MOCK_APP_NAME
              </mock-styled.h5>
              <mock-styled.h6 />
              <mock-styled.h6 />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div
          classname="el-fade-in mock-css.
  cursor: pointer;
"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.div
                style="font-size: 1.953125em; width: 50px; height: 50px;"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 60 35"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M50.9685 13.7768C50.1805 8.8795 45.8082 5.12069 40.5469 5.12069C38.5676 5.12069 36.6656 5.65245 35.016 6.64427C32.5063 2.54863 27.9881 0 22.9688 0C15.2148 0 8.90625 6.12582 8.90625 13.6552C8.90625 13.7018 8.90625 13.7502 8.90801 13.7968C3.92461 14.6119 0 18.8308 0 23.8966C0 29.544 4.84816 34.1379 10.6641 34.1379H49.3359C55.1518 34.1379 60 29.544 60 23.8966C60 18.7876 56.0119 14.542 50.9685 13.7768Z"
                    fill="#E3E3E3"
                  />
                </svg>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname="el-card-sub-heading-wrap-avatar"
            >
              <mock-styled.h5>
                MOCK_APP_NAME_ANOTHER
              </mock-styled.h5>
              <mock-styled.h6 />
              <mock-styled.h6 />
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
